[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/UI/ViewportContainer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GimbleCam.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/Fileselect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/UI/Main.gd" type="Script" id=4]
[ext_resource path="res://Scripts/UI/VersionLabel.gd" type="Script" id=5]
[ext_resource path="res://Scripts/UI/SelectBox.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/wireframe.svg" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/chart.svg" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/Presskits/Logo white.svg" type="Texture" id=12]
[ext_resource path="res://Assets/Icons/Presskits/github-mark-white.svg" type="Texture" id=13]

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 0.44, 0.44, 0.44, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.145098, 0.156863, 0.211765, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 416.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 416.0
margin_bottom = 562.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 38.0
margin_top = 111.0
margin_right = 378.0
margin_bottom = 451.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer"]
margin_right = 340.0
margin_bottom = 340.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 320.0
custom_constants/separation = 20

[node name="Inputfile" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 54.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
Caption = "Voxelfile"
Filters = PoolStringArray( "*.vox ; MagicaVoxel file", "*.gox; Goxel", "*.kenshape; Kenshape", "*.qb; Qubicle Binary", "*.qbt; Qubicle Binary Tree", "*.qef; Qubicle Exchange", "*.qbcl; Qubicle File" )

[node name="Caption" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Inputfile" index="0"]
margin_right = 300.0
text = "Voxelfile"

[node name="HBoxContainer" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Inputfile" index="1"]
margin_right = 300.0

[node name="Path" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Inputfile/HBoxContainer" index="0"]
margin_right = 279.0

[node name="Button" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Inputfile/HBoxContainer" index="1"]
margin_left = 283.0
margin_right = 300.0

[node name="Outputfile" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 300.0
margin_bottom = 128.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
Caption = "Outputfile"
Filters = PoolStringArray( "*.obj ; Wavefront Obj file", "*.gltf, *.glb ; glTF Text", "*.png ; PNG Image", "*.escn; Godot Scene", "*.ply; Stanford", "*.fbx; FBX" )
SaveDialog = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 300.0
margin_bottom = 202.0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 24.0
text = "Meshing method"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 54.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 300.0
margin_bottom = 254.0
pressed = true
text = "Objects in worldspace"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 300.0
margin_bottom = 300.0
text = "Save"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 566.0
margin_right = 416.0
margin_bottom = 600.0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 416.0
margin_bottom = 24.0
text = "Version: 0.1.2-Alpha"
script = ExtResource( 5 )

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 420.0
margin_right = 976.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
stretch = true
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer"]
size = Vector2( 556, 600 )
transparent_bg = true
handle_input_locally = false
msaa = 1
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="HBoxContainer/ViewportContainer/Viewport"]

[node name="GimbleCam" parent="HBoxContainer/ViewportContainer/Viewport/Spatial" instance=ExtResource( 2 )]
MaxZoom = 200

[node name="DirectionalLight" type="DirectionalLight" parent="HBoxContainer/ViewportContainer/Viewport/Spatial"]
transform = Transform( -0.389703, 0.460471, 0.797558, -7.57103e-08, -0.866025, 0.5, 0.920941, 0.194851, 0.337492, 0, 8, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="HBoxContainer/ViewportContainer/Viewport/Spatial"]
environment = SubResource( 2 )

[node name="Statistics" type="PanelContainer" parent="HBoxContainer/ViewportContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.501961 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ViewportContainer/Statistics"]
margin_right = 175.0
margin_bottom = 100.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ViewportContainer/Statistics/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 155.0
margin_bottom = 98.0

[node name="StatisticsLabel" type="Label" parent="HBoxContainer/ViewportContainer/Statistics/MarginContainer/VBoxContainer"]
margin_right = 135.0
margin_bottom = 60.0
text = "Blockcount: 10
Vetices: 1051
Faces: 200"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_left = 980.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer"]
margin_right = 44.0
margin_bottom = 600.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 595.0

[node name="Wireframe" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
hint_tooltip = "Toggle wireframe"
toggle_mode = true
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="Button2" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 34.0
margin_bottom = 72.0
rect_min_size = Vector2( 34, 34 )
hint_tooltip = "Toggle statistics"
toggle_mode = true
icon = ExtResource( 9 )

[node name="Control" type="Control" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 34.0
margin_bottom = 514.0
size_flags_vertical = 3

[node name="Github" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 518.0
margin_right = 34.0
margin_bottom = 552.0
rect_min_size = Vector2( 34, 34 )
hint_tooltip = "Contribute to V-Optimizer and VCore"
icon = ExtResource( 13 )
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 556.0
margin_right = 34.0
margin_bottom = 590.0
rect_min_size = Vector2( 34, 34 )
hint_tooltip = "Follow me on Twitter @Vailor11"
icon = ExtResource( 12 )
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="load_file" from="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Inputfile" to="." method="_on_Fileselect_load_file"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CheckButton" to="." method="_on_worldspace_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="resized" from="HBoxContainer/ViewportContainer" to="HBoxContainer/ViewportContainer" method="_on_ViewportContainer_resized"]
[connection signal="toggled" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Wireframe" to="." method="_on_Button_toggled"]
[connection signal="toggled" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_toggled"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Github" to="." method="_on_Github_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_twitter_pressed"]

[editable path="HBoxContainer/VBoxContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Inputfile"]
